welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: ';' expected but '=' found.
    tableauCouleur[i]=getCouleurSol();
                     ^Array1:15: error: identifier expected but integer literal found.
  tableauCouleur[5]=getCouleurSol();
                 ^Array1:15: error: ']' expected but ';' found.
  tableauCouleur[5]=getCouleurSol();
                                   ^Array1:29: error: identifier expected but integer literal found.
  setCouleurBrosse(t[0]);
                     ^Array1:32: error: ']' expected but '}' found.
}
^